; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_like_support.c_string_to_datum.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_like_support.c_string_to_datum.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NAMEOID = common dso_local global i64 0, align 8
@namein = common dso_local global i32 0, align 4
@BYTEAOID = common dso_local global i64 0, align 8
@byteain = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i64)* @string_to_datum to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @string_to_datum(i8* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = icmp ne i8* %6, null
  %8 = zext i1 %7 to i32
  %9 = call i32 @Assert(i32 %8)
  %10 = load i64, i64* %5, align 8
  %11 = load i64, i64* @NAMEOID, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %13, label %18

13:                                               ; preds = %2
  %14 = load i32, i32* @namein, align 4
  %15 = load i8*, i8** %4, align 8
  %16 = call i32 @CStringGetDatum(i8* %15)
  %17 = call i32 @DirectFunctionCall1(i32 %14, i32 %16)
  store i32 %17, i32* %3, align 4
  br label %30

18:                                               ; preds = %2
  %19 = load i64, i64* %5, align 8
  %20 = load i64, i64* @BYTEAOID, align 8
  %21 = icmp eq i64 %19, %20
  br i1 %21, label %22, label %27

22:                                               ; preds = %18
  %23 = load i32, i32* @byteain, align 4
  %24 = load i8*, i8** %4, align 8
  %25 = call i32 @CStringGetDatum(i8* %24)
  %26 = call i32 @DirectFunctionCall1(i32 %23, i32 %25)
  store i32 %26, i32* %3, align 4
  br label %30

27:                                               ; preds = %18
  %28 = load i8*, i8** %4, align 8
  %29 = call i32 @CStringGetTextDatum(i8* %28)
  store i32 %29, i32* %3, align 4
  br label %30

30:                                               ; preds = %27, %22, %13
  %31 = load i32, i32* %3, align 4
  ret i32 %31
}

declare dso_local i32 @Assert(i32) #1

declare dso_local i32 @DirectFunctionCall1(i32, i32) #1

declare dso_local i32 @CStringGetDatum(i8*) #1

declare dso_local i32 @CStringGetTextDatum(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
